tests/NormalTests/paczka1/small_fuzzy/23088377.err
Error in line 12: vdVHvAc A239 11,0
Error in line 10: gR5okY3mg A725 56,5
Error in line 14: gR5okY3mg S664 52,1
